<resources>
    <string name="app_name">Pro Academy</string>
    <string name="jugar">Comenzar el juego</string>
    <string name="config">Configuracion</string>
    <string name="logr">Actividades</string>
    <string name="infor">Informacion</string>
    <string name="book">Libro: </string>
    <string name="autor">Autor: </string>
    <string name="selectlvl">Seleccione un nivel</string>
    <string name="login">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre de usuario</string>
    <string name="country">Pais</string>
    <string name="version">Version 1.0</string>
    <string name="madeby">Creada por</string>
    <string name="creators">Oswaldo Garcia Lemus y Daniel Hernandez Cortes</string>
    <string name="score">Puntuacion</string>
    <string name="resp">Su Respuesta</string>
    <string name="puntot">Puntuacion total</string>
    <string name="busclibs">Buscar libros</string>
    <string name="addlib">Agregar libros</string>
    <string name="verLibs">Mis libros</string>
    <string name="queston">Mis preguntas</string>
    <string name="newques">Nuevas Preguntas</string>
    <string name="myaans">Respuestas</string>

</resources>
